# plaid-bridges

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: checksum_release.yml  doc.yml  lint-format-check.yaml  publish-pypi.yml  testing.yml
docs/: conf.py  index.rst
docs/source/: contributing.md  notebooks.rst  quickstart.md
docs/source/notebooks/: dataloaders.ipynb
examples/: run_examples.sh
examples/common/: common_example.py
examples/torch/: torch_example.py
notebooks/: common.ipynb  dataloaders.ipynb  torch.ipynb
src/plaid_bridges/: __init__.py  torch_data_loaders.py
src/plaid_bridges/common/: __init__.py  base.py  base_regression.py  base_regression_dataset.py  homogeneous.py  homogeneous_dataset.py
src/plaid_bridges/dataloaders/: __init__.py  generic.py  torch.py
src/plaid_bridges/torch/: __init__.py  base.py  grid.py  grid_fields_and_scalars.py  pyg.py
tests/: conftest.py  test_dummpy.py
tests/common/: test_base_common.py  test_base_regression.py  test_base_regression_dataset.py  test_homogeneous.py  test_homogeneous_dataset.py
tests/torch/: test_base_torch.py  test_grid.py  test_grid_fields_and_scalars.py  test_pyg.py
