[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plaid-bridges"
description = "PLAID bridges for machine learning frameworks"
authors = [
    { name = "Safran", email = "fabien.casenave@safrangroup.com" }
]
requires-python = ">=3.10, <3.14"
keywords=[
    "machine learning",
    "physics",
    "data-model",
    "Safran",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "torch",
    "torch-geometric",
    # "pyplaid==0.1.8",
    "pyplaid @ git+https://github.com/PLAID-lib/plaid.git@447c8d1fea8a956afe715e2f1ed67ff200bc40bd",
]

dynamic = ["version"]

[tool.setuptools_scm]
write_to = "src/plaid_bridges/_version.py"

[project.urls]
homepage = "https://github.com/PLAID-lib/plaid-bridges"
documentation = "https://plaid-bridges.readthedocs.io"
repository = "https://github.com/PLAID-lib/plaid-bridges"

[project.license]
text="BSD 3-Clause License"
files=["LICENSE.txt"]

[project.readme]
file="README.md"
content-type = "text/markdown"

[tool.setuptools]
platforms = [
    "Linux",
    "Mac OS-X",
    "Unix",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["plaid_bridges*"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "pyright[nodejs]",
    "pre-commit",
    "sphinx",
    "sphinx-autoapi",
    "myst-nb",
    "myst-parser",
    "jupytext",
    "furo",
    # "plaid-ops==0.1.8",
    "plaid-ops @ git+https://github.com/PLAID-lib/plaid-ops.git@e3c6c49f5681925d76c71ed1a04cda04463502ed"
]
